@@ -10,6 +10,9 @@
  PATCH: [ 1430321 ] Swedish translation update and feedback on WinMerge 2.5.3.2
   By Hans Eriksson
   Src\Languages\Swedish: MergeSwedish.rc
+ PATCH: [ 1434270 ] Fix difference counts
+  Submitted by Perry
+  Src: DiffWrapper.cpp
 
 2006-02-21 Kimmo
  PATCH: [ 1435384 ] Add context menu for diff pane
